v3/crates/schema/tests/snapshots/schema__tests__role_agnostic_schemas_have_no_presets.snap
---
source: crates/schema/src/lib.rs
expression: "make_role_agnostic_sdl_from_metadata_file(PathBuf::from(\"tests/metadata_with_presets.json\").as_ref())"
---
schema {
  query: Query 
}

scalar Boolean

type CommandActor {
  actor_id: Int!
  movie_id: Int!
  name: String!
}

scalar Float

scalar ID

scalar Int

interface Node {
  id: ID!
}

type Query {
  getActorsByMovieIdBounds(
    lower_bound: Int!,
    upper_bound: Int!
    ): [CommandActor]
  node(id: ID!): Node
}

scalar String
